--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,15 +1,19 @@
 version: "3"
+
 services:
   backend:
     build: ./src
-    container_name: "backend"
+    container_name: backend
     env_file:
       - ./src/.env
   frontend:
-    container_name: "frontend"
     build: ./public_html
     ports:
       - "80:80"
+      - "443:443"
     volumes:
-      - ./default.conf:/etc/nginx/conf.d/default.conf
+      - ./production.conf:/etc/nginx/conf.d/default.conf
       - ./public_html:/usr/share/nginx/html
+      - ./dh-param/dhparam-2048.pem:/etc/ssl/certs/dhparam-2048.pem
+      - /docker-volumes/pwp/etc/letsencrypt/live/narrowoodworking.com/fullchain.pem:/etc/letsencrypt/live/narrowoodworking.com/fullchain.pem
+      - /docker-volumes/pwp/etc/letsencrypt/live/narrowoodworking.com/privkey.pem:/etc/letsencrypt/live/narrowoodworking.com/privkey.pem
